# speedRouter

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  test_app.py
.agentx/: README.md  agency_import.json
.github/agents/: my-agent.agent.md  speedrouter-implementation-pilot.agent.md  speedrouter-network-engineer.agent.md  speedrouter-orchestrator.agent.md  speedrouter-security-auditor.agent.md  speedrouter-speed-analyst.agent.md  speedrouter-vpn-specialist.agent.md
agent_tools/: cli.py  importer.py  registry.py
agent_tools/data/: agents.json
static/css/: style.css
static/js/: app.js
templates/: index.html
