[project]
name = "speedrouter"
version = "0.1.0"
description = "Modem management UI – login, security optimiser, VPN, and speed test"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography==46.0.5",
    "flask==3.1.0",
    "requests==2.32.3",
    "speedtest-cli==2.1.3",
]

[project.scripts]
speedrouter = "app:main"
agentx = "agent_tools.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agent_tools", "agent_tools.data"]
py-modules = ["app"]

[tool.setuptools.package-data]
agent_tools = ["data/*.json"]
